# tket2

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  Cargo.toml  DEVELOPMENT.md  devenv.nix  hugrenv.nix  justfile  pyproject.toml  release-please-config.json  release-plz.toml
hugr-passes/: CHANGELOG.md  Cargo.toml  README.md
hugr-passes/benches/: bench_main.rs
hugr-passes/benches/benchmarks/: examples.rs  hash.rs  mod.rs
hugr-passes/src/: composable.rs  const_fold.rs  dataflow.rs  dead_code.rs  dead_funcs.rs  force_order.rs  hash.rs  inline_dfgs.rs  inline_funcs.rs  lib.rs  lower.rs  monomorphize.rs  nest_cfgs.rs  non_local.rs  normalize_cfgs.rs  redundant_order_edges.rs  replace_types.rs  untuple.rs
hugr-passes/src/composable/: scope.rs
hugr-passes/src/const_fold/: test.rs  value_handle.rs
hugr-passes/src/dataflow/: datalog.rs  partial_value.rs  results.rs  test.rs
hugr-passes/src/replace_types/: handlers.rs  linearize.rs
pg-libs/: Cargo.toml  README.md  justfile  pyproject.toml
pg-libs/.cargo/: config.toml
pg-libs/pg-converters/pg-tk/: Cargo.toml  README.md
pg-libs/pg-converters/pg-tk/scripts/: compare_unitaries_worker.py
pg-libs/pg-converters/pg-tk/src/: converters.rs  lib.rs  unitary_comparison.rs
pg-libs/pg-core/: Cargo.toml  README.md
pg-libs/pg-core/src/: errors.rs  gates.rs  graph.rs  lib.rs  ops.rs  tests.rs  traits.rs
qis-compiler/: CHANGELOG.md  Cargo.toml  pyproject.toml
qis-compiler/python/selene_hugr_qis_compiler/: selene_hugr_qis_compiler.pyi
qis-compiler/python/tests/: generate_hugrs.py  test_basic_generation.py  test_platforms.py  test_qsystem_platforms.py
qis-compiler/python/tests/resources/: addition_3_11.hugr  check.hugr  discard_qb_array.hugr  entry_args.hugr  flip_some.hugr  measure_qb_array.hugr  modifiers.hugr  no_results.hugr  postselect_exit.hugr  postselect_panic.hugr  print_current_shot.hugr  qft_32.hugr  rng.hugr  rus.hugr  simple_modifier.hugr  slp_or_chain.hugr  unsupported_pytket_ops.hugr
qis-compiler/python/tests/snapshots/test_basic_generation/test_gpu/aarch64-apple-darwin/: gpu_aarch64-apple-darwin
qis-compiler/python/tests/snapshots/test_basic_generation/test_gpu/x86_64-apple-darwin/: gpu_x86_64-apple-darwin
qis-compiler/python/tests/snapshots/test_basic_generation/test_gpu/x86_64-unknown-linux-gnu/: gpu_x86_64-unknown-linux-gnu
qis-compiler/python/tests/snapshots/test_basic_generation/test_gpu/x86_64-windows-msvc/: gpu_x86_64-windows-msvc
qis-compiler/python/tests/snapshots/test_basic_generation/test_llvm/aarch64-apple-darwin-discard_qb_array/: discard_qb_array_aarch64-apple-darwin
qis-compiler/python/tests/snapshots/test_basic_generation/test_llvm/aarch64-apple-darwin-flip_some/: flip_some_aarch64-apple-darwin
qis-compiler/python/tests/snapshots/test_basic_generation/test_llvm/aarch64-apple-darwin-measure_qb_array/: measure_qb_array_aarch64-apple-darwin
qis-compiler/python/tests/snapshots/test_basic_generation/test_llvm/aarch64-apple-darwin-modifiers/: modifiers_aarch64-apple-darwin
qis-compiler/python/tests/snapshots/test_basic_generation/test_llvm/aarch64-apple-darwin-no_results/: no_results_aarch64-apple-darwin
qis-compiler/python/tests/snapshots/test_basic_generation/test_llvm/aarch64-apple-darwin-postselect_exit/: postselect_exit_aarch64-apple-darwin
qis-compiler/python/tests/snapshots/test_basic_generation/test_llvm/aarch64-apple-darwin-postselect_panic/: postselect_panic_aarch64-apple-darwin
qis-compiler/python/tests/snapshots/test_basic_generation/test_llvm/aarch64-apple-darwin-rng/: rng_aarch64-apple-darwin
qis-compiler/python/tests/snapshots/test_basic_generation/test_llvm/aarch64-apple-darwin-rus/: rus_aarch64-apple-darwin
qis-compiler/python/tests/snapshots/test_basic_generation/test_llvm/helios-aarch64-apple-darwin-discard_qb_array/: discard_qb_array_aarch64-apple-darwin_helios
qis-compiler/python/tests/snapshots/test_basic_generation/test_llvm/helios-aarch64-apple-darwin-entry_args/: entry_args_aarch64-apple-darwin_helios
qis-compiler/python/tests/snapshots/test_basic_generation/test_llvm/helios-aarch64-apple-darwin-flip_some/: flip_some_aarch64-apple-darwin_helios
qis-compiler/python/tests/snapshots/test_basic_generation/test_llvm/helios-aarch64-apple-darwin-measure_qb_array/: measure_qb_array_aarch64-apple-darwin_helios
qis-compiler/rust/: array.rs  gpu.rs  lib.rs  selene_specific.rs  utils.rs
qis-compiler/rust/snapshots/: selene_hugr_qis_compiler__gpu__test__gpu_codegen@llvm21_call_args.snap  selene_hugr_qis_compiler__gpu__test__gpu_codegen@llvm21_call_ret_float.snap  selene_hugr_qis_compiler__gpu__test__gpu_codegen@llvm21_call_ret_int.snap  selene_hugr_qis_compiler__gpu__test__gpu_codegen@llvm21_dispose_context.snap  selene_hugr_qis_compiler__gpu__test__gpu_codegen@llvm21_get_context.snap  selene_hugr_qis_compiler__gpu__test__gpu_codegen@llvm21_lookup_by_id.snap  selene_hugr_qis_compiler__gpu__test__gpu_codegen@llvm21_lookup_by_name.snap  selene_hugr_qis_compiler__gpu__test__gpu_codegen@llvm21_read_result_float.snap  selene_hugr_qis_compiler__gpu__test__gpu_codegen@llvm21_read_result_int.snap  selene_hugr_qis_compiler__gpu__test__gpu_codegen@pre-mem2reg@llvm21_call_args.snap  selene_hugr_qis_compiler__gpu__test__gpu_codegen@pre-mem2reg@llvm21_call_ret_float.snap  selene_hugr_qis_compiler__gpu__test__gpu_codegen@pre-mem2reg@llvm21_call_ret_int.snap  selene_hugr_qis_compiler__gpu__test__gpu_codegen@pre-mem2reg@llvm21_dispose_context.snap  selene_hugr_qis_compiler__gpu__test__gpu_codegen@pre-mem2reg@llvm21_get_context.snap  selene_hugr_qis_compiler__gpu__test__gpu_codegen@pre-mem2reg@llvm21_lookup_by_id.snap  selene_hugr_qis_compiler__gpu__test__gpu_codegen@pre-mem2reg@llvm21_lookup_by_name.snap  selene_hugr_qis_compiler__gpu__test__gpu_codegen@pre-mem2reg@llvm21_read_result_float.snap  selene_hugr_qis_compiler__gpu__test__gpu_codegen@pre-mem2reg@llvm21_read_result_int.snap
tket-qec/: Cargo.toml  README.md
tket-qec/src/: iceberg.rs  lib.rs
tket-qec/src/iceberg/: ops.rs  types.rs
(+856 files in other folders)
