[profile.release]
lto = "thin"

[workspace]
resolver = "2"
members = [
    "badger-optimiser",
    "compile-rewriter",
    "qis-compiler",
    "tket",
    "tket1-passes",
    "tket-py",
    "tket-qsystem",
]
default-members = ["tket", "tket-qsystem"]

[workspace.package]
rust-version = "1.91"
edition = "2024"
homepage = "https://github.com/quantinuum/tket2"
repository = "https://github.com/quantinuum/tket2"
license = "Apache-2.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    # Set by our CI
    'cfg(ci_run)',
    # Set by codecov
    'cfg(coverage,coverage_nightly)',
] }
missing_docs = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"
iter_over_hash_type = "warn"

# TODO: Reduce the size of error types.
result_large_err = "allow"
large_enum_variant = "allow"

[patch.crates-io]

# Uncomment to use unreleased versions of hugr
#hugr = { git = "https://github.com/quantinuum/hugr", "rev" = "1787e12" }
#hugr-core = { git = "https://github.com/quantinuum/hugr", "rev" = "1787e12" }
#hugr-cli = { git = "https://github.com/quantinuum/hugr", "rev" = "1787e12" }
#hugr-llvm = { git = "https://github.com/quantinuum/hugr", "rev" = "1787e12" }
# portgraph = { git = "https://github.com/quantinuum/portgraph", rev = "68b96ac737e0c285d8c543b2d74a7aa80a18202c" }

[workspace.dependencies]
# Make sure to run `just recompile-eccs` if the hugr serialisation format changes.
hugr = "0.28.0"
hugr-core = "0.28.0"
hugr-cli = "0.28.0"
portgraph = "0.16.1"
# There can only be one `pyo3` version in the whole workspace, so we use a
# loose version constraint to prevent breaking changes in dependent crates where possible.
pyo3 = ">= 0.28.2, < 0.29"
pyo3-build-config = ">= 0.28.2, < 0.29"

bindgen = "0.72"
cbindgen = "0.29"
cc = "1.2.63"
conan2 = "0.1.9"
itertools = "0.14.0"
tket-json-rs = "0.8.3"
portmatching = "0.3.3"
bytemuck = "1.25.0"
cgmath = "0.18.0"
chrono = "0.4.45"
clap = "4.6.1"
crossbeam-channel = "0.5.15"
csv = "1.4.0"
delegate = "0.13.5"
derive_more = "2.1.1"
fxhash = "0.2.1"
indexmap = "2.14.0"
lazy_static = "1.5.0"
libc = "0.2.186"
num_cpus = "1.17.0"
pastey = "0.2.3"
peak_alloc = "0.3.0"
pest = "2.8.6"
pest_derive = "2.8.6"
petgraph = { version = ">= 0.8.3, < 0.9", default-features = false }
priority-queue = "2.7.0"
proptest = "1.11.0"
proptest-recurse = "0.5.0"
rayon = "1.12"
rmp-serde = "1.3.1"
rstest = "0.26.1"
serde = "1.0.228"
serde_json = "1.0.150"
serde_with = "3.21.0"
smol_str = "0.3.6"
strum = ">= 0.28.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.23"
typetag = "0.2.22"
cool_asserts = "2.0.4"
zstd = "0.13.3"
anyhow = "1.0.102"
num-rational = "0.4.2"

[profile.release.package.tket-py]
# Some configurations to reduce the size of tket wheels
strip = true
