[tool.uv.workspace]
members = ["tket-py", "tket-eccs", "tket-exts", "qis-compiler"]

[dependency-groups]
dev = [
    "maturin>=1.13.3,<2",
    "pytest>=9.0.3,<10",
    "pytest-cov ~=7.0",
    "ruff>=0.15.16,<0.16",
    "mypy>=2.1.0,<3",
    "hypothesis>=6.155.1,<7",
    "graphviz ~=0.21.0",
    "pre-commit~=4.6",
    # Required to run `maturin develop`
    "pip>=26.1.2",
    # Pyyaml 0.6.0 makes setuptools fail. This ensures we're using a newer version.
    "pyyaml >=6.0.2",
    "hugr~=0.17.0",
]
conan = ["conan>=2.29.0,<3"]

[tool.uv]
prerelease = "explicit"

[tool.uv.sources]
hugr = { git = "https://github.com/quantinuum/hugr", subdirectory = "hugr-py", rev = "1787e12" }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.maturin]
# Maturin is not the build system for the workspace (it is only used for `tket-py`).
# We mirror the `tket-py/pyproject.toml` config here so `maturin develop` still works
# from the root of the workspace.
manifest-path = "tket-py/Cargo.toml"
python-source = "tket-py"
module-name = "tket._tket"

[tool.mypy]
exclude = '''(?x)(
    ^target/        # Build artifacts
    | ^notebooks/   # Examples
    | ^test_files/  # Test files
    | ^tket1-passes/tket-c-api/ # Do not check conan files
)'''
ignore_missing_imports = true

# TODO: Fix the lint errors and enable this
#strict = true

[tool.coverage.report]
exclude_also = [
    # Don't complain about missing coverage on typing imports
    "if TYPE_CHECKING:",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    "raise InternalGuppyError",

    # Don't complain about abstract methods, they aren't run:
    "@abstractmethod",
]
