[package]
name = "hugr-passes"
version = "0.26.1"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
readme = "README.md"
documentation = "https://docs.rs/hugr-passes/"
homepage = { workspace = true }
repository = { workspace = true }
description = "Compiler passes for Quantinuum's HUGR"
keywords = ["Quantum", "Quantinuum"]
categories = ["compilers"]

[lints]
workspace = true

[lib]
bench = false

[dependencies]
hugr-core = { workspace = true }
portgraph = { workspace = true }
ascent = { version = "0.8.0" }
derive_more = { workspace = true, features = [
    "add_assign",
    "display",
    "error",
    "from",
] }
itertools = { workspace = true }
pastey = { workspace = true }
thiserror = { workspace = true }
petgraph = { workspace = true }
strum = { workspace = true }
fxhash = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
hugr-core = { workspace = true, features = ["zstd"] }
rstest = { workspace = true }
proptest = { workspace = true }
proptest-recurse = { workspace = true }

# Defined here so it can be overridden by the codspeed CI job
# using `cargo add`.
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "bench_main"
harness = false
