[workspace]
resolver = "3"
members = [
    "pg-core",
    "pg-converters/pg-tk",
    ]

[workspace.package]
rust-version = "1.91"
edition = "2024"
homepage = "https://github.com/quantinuum/tket2"
repository = "https://github.com/quantinuum/tket2"
license = "Apache-2.0"

[workspace.dependencies]
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"

[profile.test]
opt-level = 1

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    # Set by our CI
    'cfg(ci_run)',
    # Set by codecov
    'cfg(coverage,coverage_nightly)',
] }
missing_docs = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"
iter_over_hash_type = "warn"
result_large_err = "allow"
large_enum_variant = "allow"
