[build-system]
requires = ["maturin>=1.7.4,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-snapshot~=0.9.0",
    "cibuildwheel>=2.23.2",
    "hugr~=0.15.1",
]

[project]
name = "selene-hugr-qis-compiler"
description = "A Python frontend for compiling HUGR to Quantinuum's QIS."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Seyon Sivarajah", email = "seyon.sivarajah@quantinuum.com" },
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]
maintainers = [
    { name = "Seyon Sivarajah", email = "seyon.sivarajah@quantinuum.com" },
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",

    "Topic :: Scientific/Engineering :: Quantum Computing",
    "Topic :: Software Development :: Compilers",

    "License :: OSI Approved :: Apache Software License",

    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.2.10" # updated by release-please

[project.urls]
repository = "https://github.com/quantinuum/tket2/tree/main/qis-compiler"

[tool.maturin]
profile = "release"
features = ["pyo3/extension-module"]
python-source = "python"
manifest-path = "Cargo.toml"
include = ["python/selene_hugr_qis_compiler/py.typed"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-annotations
    "ANN",
    # flake8-bugbear
    "B",
    # isort
    "I",
    # flake8-simplify
    "SIM",
    # pyupgrade
    "UP",
    # flake8-pyi
    "PYI",
]
ignore = ["F403", "F405", "PYI021", "PYI048"]


[tool.uv]
# Rebuild package when any rust files change
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "rust/**/*.rs" },
]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build[uv]; args: -C--profile=release"
skip = "*-win32 *-manylinux_i686 *-musllinux*"
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64"

before-test = "uv sync --only-dev --active"
test-command = "pytest -vv {package}"

[tool.cibuildwheel.linux.environment]
PATH = '$HOME/.cargo/bin:/tmp/hugrverse/bin:$PATH'
TKET_C_API_PATH = '/tmp/hugrverse'
LLVM_SYS_211_PREFIX = '/tmp/hugrverse'
[tool.cibuildwheel.linux]
environment-pass = ["CACHE_CARGO"]
before-all = '''
    curl -sSf https://sh.rustup.rs | sh -s -- -y;
    dnf install -y --setopt=install_weak_deps=False libffi-devel gcc-toolset-13;
    if ${CACHE_CARGO};
    then
        if [ -d /host/tmp/ci-cache/hugr-qis/.cargo ];
        then
            cp -r /host/tmp/ci-cache/hugr-qis/.cargo $HOME;
        fi;
        if [ -d /host/tmp/ci-cache/hugr-qis/target ];
        then
            cp -r /host/tmp/ci-cache/hugr-qis/target {package}
        fi;
    fi;
    if [ "$(uname -m)" = "x86_64" ]; then
        HUGRVERSE_ARCH=manylinux_2_28_x86_64;
    else
        HUGRVERSE_ARCH=manylinux_2_28_aarch64;
    fi;
    llvm_url="https://github.com/Quantinuum/hugrverse-env/releases/download/v0.3.0/hugrenv-llvm-${HUGRVERSE_ARCH}.tar.gz"
    tket_url="https://github.com/Quantinuum/hugrverse-env/releases/download/v0.3.0/hugrenv-tket-${HUGRVERSE_ARCH}.tar.gz"
    echo "Downloading HUGRVERSE environment from ${llvm_url} and ${tket_url}";
    curl -L $llvm_url | tar xz -C /tmp;
    curl -L $tket_url | tar xz -C /tmp;
'''
before-test = '''
    if ${CACHE_CARGO};
    then
        echo "Copying cache to the host"

        mkdir -p /host/tmp/ci-cache/hugr-qis;

        if [ -d $HOME/.cargo ];
        then
            rm -rf /host/tmp/ci-cache/hugr-qis/.cargo;
            cp -r $HOME/.cargo /host/tmp/ci-cache/hugr-qis/;
        fi;

        if [ -d {package}/target ];
        then
            rm -rf /host/tmp/ci-cache/hugr-qis/target;
            cp -r {package}/target /host/tmp/ci-cache/hugr-qis;
        fi;

        # make sure the cache is readable by the host
        chmod -R a+rX /host/tmp/ci-cache/hugr-qis
    fi
    uv sync --only-dev --active
'''
repair-wheel-command = [
    'auditwheel repair -w {dest_dir} {wheel}',
    'uvx abi3audit --strict --report {wheel}',
]

[tool.cibuildwheel.macos.environment]
PATH = '/tmp/hugrverse/bin:$PATH'
LLVM_SYS_211_PREFIX = '/tmp/hugrverse'
TKET_C_API_PATH = '/tmp/hugrverse'
MACOSX_DEPLOYMENT_TARGET = "15.0"
[tool.cibuildwheel.macos]
before-all = [
    'curl -sSf https://sh.rustup.rs | sh -s -- -y',
    'if [ "$(uname -m)" = "arm64" ]; then HUGRVERSE_ARCH=macosx_15_0_aarch64; else HUGRVERSE_ARCH=macosx_15_0_x86_64; fi',
    'llvm_url="https://github.com/Quantinuum/hugrverse-env/releases/download/v0.3.0/hugrenv-llvm-${HUGRVERSE_ARCH}.tar.gz"',
    'tket_url="https://github.com/Quantinuum/hugrverse-env/releases/download/v0.3.0/hugrenv-tket-${HUGRVERSE_ARCH}.tar.gz"',
    'echo "Downloading HUGRVERSE environment from ${llvm_url} and ${tket_url}"',
    'curl -L $llvm_url | tar xz -C /tmp',
    'curl -L $tket_url | tar xz -C /tmp',
]
repair-wheel-command = [
    'DYLD_FALLBACK_LIBRARY_PATH=${LLVM_SYS_211_PREFIX}/lib delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}',
    'uvx abi3audit --strict --report {wheel}',
]

[tool.cibuildwheel.windows.environment]
PATH = '$RUNNER_TEMP\\hugrverse\\bin;$PATH'
LLVM_SYS_211_PREFIX = '$RUNNER_TEMP\\hugrverse'
TKET_C_API_PATH = '$RUNNER_TEMP\\hugrverse'
[tool.cibuildwheel.windows]
before-all = [
    'curl -L -o hugrenv-llvm-win_amd64.tar.gz https://github.com/Quantinuum/hugrverse-env/releases/download/v0.3.0/hugrenv-llvm-win_amd64.tar.gz',
    'curl -L -o hugrenv-tket-win_amd64.tar.gz https://github.com/Quantinuum/hugrverse-env/releases/download/v0.3.0/hugrenv-tket-win_amd64.tar.gz',
    # tar is awkward wrt windows paths, so use python
    '''python -c "import os, tarfile; d=os.environ['RUNNER_TEMP']; tarfile.open('hugrenv-llvm-win_amd64.tar.gz', 'r:gz').extractall(d)"''',
    '''python -c "import os, tarfile; d=os.environ['RUNNER_TEMP']; tarfile.open('hugrenv-tket-win_amd64.tar.gz', 'r:gz').extractall(d)"''',
    'rustup update',
]
repair-wheel-command = [
    'uvx delvewheel repair -w {dest_dir} {wheel}',
    'uvx abi3audit --strict --report {wheel}',
]
