[build-system]
requires = ["maturin>=1.7.4,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-snapshot~=0.9.0",
    "cibuildwheel>=2.23.2",
    "hugr~=0.16.0",
]

[project]
name = "selene-hugr-qis-compiler"
description = "A Python frontend for compiling HUGR to Quantinuum's QIS."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Seyon Sivarajah", email = "seyon.sivarajah@quantinuum.com" },
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]
maintainers = [
    { name = "Seyon Sivarajah", email = "seyon.sivarajah@quantinuum.com" },
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",

    "Topic :: Scientific/Engineering :: Quantum Computing",
    "Topic :: Software Development :: Compilers",

    "License :: OSI Approved :: Apache Software License",

    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.3.0" # updated by release-please

[project.urls]
repository = "https://github.com/quantinuum/tket2/tree/main/qis-compiler"

[tool.maturin]
profile = "release"
features = ["pyo3/extension-module"]
python-source = "python"
manifest-path = "Cargo.toml"
include = ["python/selene_hugr_qis_compiler/py.typed"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-annotations
    "ANN",
    # flake8-bugbear
    "B",
    # isort
    "I",
    # flake8-simplify
    "SIM",
    # pyupgrade
    "UP",
    # flake8-pyi
    "PYI",
]
ignore = ["F403", "F405", "PYI021", "PYI048"]


[tool.uv]
# Rebuild package when any rust files change
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "rust/**/*.rs" },
]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build[uv]; args: -C--profile=release"
skip = "*-win32 *-manylinux_i686 *-musllinux*"

# TODO: This has been temporarily bumped to get the tests working after the
# update to LLVM 21. This needs to go back to 'manylinux_2_28' before release.
#
# The official LLVM distribution for Linux is built on glibc 2.35, so we cannot
# use it when building older manylinux versions.
manylinux-x86_64-image = "manylinux_2_34"
manylinux-aarch64-image = "manylinux_2_34"

before-test = "uv sync --only-dev --active"
test-command = "pytest -vv {package}"

[tool.cibuildwheel.linux.environment]
PATH = '$HOME/.cargo/bin:/tmp/llvm/bin:$PATH'
LLVM_SYS_211_PREFIX = '/tmp/llvm'
# The official LLVM static archives contain LLVM bitcode (from ThinLTO build)
# which GNU ld cannot handle. We use LLVM 21's own ld.lld (from /tmp/llvm/bin)
# which can correctly lower newer intrinsics like llvm.modf (added in LLVM 20).
RUSTFLAGS = '-C link-arg=-fuse-ld=lld'
# LLVM 21's ld.lld was built on Ubuntu 22.04 and requires GLIBCXX_3.4.30+.
# AlmaLinux 9 ships GCC 11 (GLIBCXX_3.4.29). gcc-toolset-13 provides
# GCC 13's libstdc++ with the needed symbols.
LD_LIBRARY_PATH = '/opt/rh/gcc-toolset-13/root/usr/lib64'
[tool.cibuildwheel.linux]
environment-pass = ["CACHE_CARGO"]
before-all = '''
    curl -sSf https://sh.rustup.rs | sh -s -- -y;
    if ${CACHE_CARGO};
    then
        if [ -d /host/tmp/ci-cache/hugr-qis/.cargo ];
        then
            cp -r /host/tmp/ci-cache/hugr-qis/.cargo $HOME;
        fi;
        if [ -d /host/tmp/ci-cache/hugr-qis/target ];
        then
            cp -r /host/tmp/ci-cache/hugr-qis/target {package}
        fi;
    fi;
    dnf install libffi-devel ncurses-devel libxml2-devel libzstd-devel zlib-devel gcc-toolset-13-runtime -y
    # llvm-config --system-libs hardcodes Debian-style absolute paths from the
    # Ubuntu 22.04 build host (e.g. /usr/lib/<arch>-linux-gnu/libzstd.a).
    # llvm-sys checks is_file() on these and panics if missing. LLVM was built
    # with LLVM_USE_STATIC_ZSTD=ON so zstd is already in the LLVM .a files;
    # create empty placeholder archives so the check passes.
    mkdir -p /usr/lib/x86_64-linux-gnu
    ar rc /usr/lib/x86_64-linux-gnu/libzstd.a
    mkdir -p /tmp/llvm;
    if [ "$(uname -m)" = "x86_64" ];
    then
        curl -LO https://github.com/llvm/llvm-project/releases/download/llvmorg-21.1.8/LLVM-21.1.8-Linux-X64.tar.xz;
        tar xf LLVM-21.1.8-Linux-X64.tar.xz -C /tmp/llvm --strip-components=1;
    else
        dnf install ncurses-compat-libs -y;
        curl -LO https://github.com/llvm/llvm-project/releases/download/llvmorg-21.1.8/LLVM-21.1.8-Linux-ARM64.tar.xz
        tar xf LLVM-21.1.8-Linux-ARM64.tar.xz -C /tmp/llvm --strip-components=1;
    fi;
    # Remove linker binaries we don't need (Mach-O, COFF, WebAssembly).
    # Keep ld.lld and lld for ELF linking with correct LLVM 21 intrinsic support.
    rm -f /tmp/llvm/bin/ld64.lld /tmp/llvm/bin/lld-link /tmp/llvm/bin/wasm-ld;
'''
before-test = '''
    if ${CACHE_CARGO};
    then
        echo "Copying cache to the host"

        mkdir -p /host/tmp/ci-cache/hugr-qis;

        if [ -d $HOME/.cargo ];
        then
            rm -rf /host/tmp/ci-cache/hugr-qis/.cargo;
            cp -r $HOME/.cargo /host/tmp/ci-cache/hugr-qis/;
        fi;

        if [ -d {package}/target ];
        then
            rm -rf /host/tmp/ci-cache/hugr-qis/target;
            cp -r {package}/target /host/tmp/ci-cache/hugr-qis;
        fi;

        # make sure the cache is readable by the host
        chmod -R a+rX /host/tmp/ci-cache/hugr-qis
    fi
    uv sync --only-dev --active
'''
repair-wheel-command = [
    'auditwheel repair -w {dest_dir} {wheel}',
    'uvx abi3audit --strict --report {wheel}',
]

[tool.cibuildwheel.macos.environment]
PATH = '/tmp/llvm/bin:$PATH'
LLVM_SYS_211_PREFIX = '/tmp/llvm'
MACOSX_DEPLOYMENT_TARGET = "15.0"
[tool.cibuildwheel.macos]
before-all = [
    'curl -sSf https://sh.rustup.rs | sh -s -- -y',
    'brew install llvm@21',
    'ln -sf $(brew --prefix llvm@21) /tmp/llvm',
]
repair-wheel-command = [
    'DYLD_FALLBACK_LIBRARY_PATH=/tmp/llvm/lib delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}',
    'uvx abi3audit --strict --report {wheel}',
]

[tool.cibuildwheel.windows.environment]
PATH = 'C:\\LLVM\\bin;$PATH'
LLVM_SYS_211_PREFIX = 'C:\\LLVM'
[tool.cibuildwheel.windows]
before-all = [
    'rustup update',
    'curl -LO https://github.com/PLC-lang/llvm-package-windows/releases/download/v21.1.7/LLVM-21.1.7-win64.7z',
    '7z x LLVM-21.1.7-win64.7z "-oC:\LLVM" -y',
]
repair-wheel-command = [
    'uvx delvewheel repair -w {dest_dir} {wheel}',
    'uvx abi3audit --strict --report {wheel}',
]
