[build-system]
requires = ["maturin>=1.7.4,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-snapshot~=0.9.0",
    "cibuildwheel>=2.23.2",
    "hugr~=0.18.0",
    "tket-exts>=0.13.1",
]

[project]
name = "selene-hugr-qis-compiler"
description = "A Python frontend for compiling HUGR to Quantinuum's QIS."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Seyon Sivarajah", email = "seyon.sivarajah@quantinuum.com" },
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]
maintainers = [
    { name = "Seyon Sivarajah", email = "seyon.sivarajah@quantinuum.com" },
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",

    "Topic :: Scientific/Engineering :: Quantum Computing",
    "Topic :: Software Development :: Compilers",

    "License :: OSI Approved :: Apache Software License",

    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.3.2" # updated by release-please

[project.urls]
repository = "https://github.com/quantinuum/tket2/tree/main/qis-compiler"

[tool.maturin]
profile = "dev"
python-source = "python"
manifest-path = "Cargo.toml"
include = ["python/selene_hugr_qis_compiler/py.typed"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-annotations
    "ANN",
    # flake8-bugbear
    "B",
    # isort
    "I",
    # flake8-simplify
    "SIM",
    # pyupgrade
    "UP",
    # flake8-pyi
    "PYI",
]
ignore = ["F403", "F405", "PYI021", "PYI048"]


[tool.uv.sources]
tket-exts = { workspace = true }

[tool.uv]
# Rebuild package when any rust files change
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "rust/**/*.rs" },
    { file = "../tket/**/*.rs" },
    { file = "../tket-qsystem/**/*.rs" },
]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build[uv]; args: -C--profile=release"
skip = "*-win32 *-manylinux_i686 *-musllinux*"
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64"

before-test = "uv sync --only-dev --active"
test-command = "pytest -vv {package}"

[tool.cibuildwheel.linux.environment]
# we prepend /host to incoming paths because cibuildwheel mounts the host filesystem at /host.
# this can ONLY be done if you know for sure that the libraries available at that directory on
# the host are compatible with the build environment, e.g. manylinux compliant.
PATH = '$HOME/.cargo/bin:/host${HUGRENV_PATH}/bin:$PATH'
TKET_C_API_PATH = '/host${TKET_C_API_PATH}'
LLVM_SYS_211_PREFIX = '/host${LLVM_SYS_211_PREFIX}'
[tool.cibuildwheel.linux]
environment-pass = ["HUGRENV_PATH", "TKET_C_API_PATH", "LLVM_SYS_211_PREFIX"]
before-all = '''
    curl -sSf https://sh.rustup.rs | sh -s -- -y;
    dnf install -y --setopt=install_weak_deps=False libffi-devel gcc-toolset-13;
'''
before-test = '''
    uv sync --only-dev --active
'''
repair-wheel-command = [
    'auditwheel repair -w {dest_dir} {wheel}',
    'uvx abi3audit --strict --report {wheel}',
]

[tool.cibuildwheel.macos.environment]
PATH = '$HOME/.cargo/bin:${HUGRENV_PATH}/bin:$PATH'
MACOSX_DEPLOYMENT_TARGET = "15.0"
[tool.cibuildwheel.macos]
before-all = ['curl -sSf https://sh.rustup.rs | sh -s -- -y']
repair-wheel-command = [
    'DYLD_FALLBACK_LIBRARY_PATH=${LLVM_SYS_211_PREFIX}/lib delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}',
    'uvx abi3audit --strict --report {wheel}',
]

[tool.cibuildwheel.windows.environment]
PATH = '${HUGRENV_PATH}\\bin;$PATH'
[tool.cibuildwheel.windows]
before-all = ['rustup update']
repair-wheel-command = [
    'uvx delvewheel repair -w {dest_dir} {wheel}',
    'uvx abi3audit --strict --report {wheel}',
]
