[package]
name = "tket-qec"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

license.workspace = true
readme = "README.md"
# documentation = "https://docs.rs/tket-qec"
homepage.workspace = true
repository.workspace = true
description = "HUGR extensions for logical operations on QEC codes."
keywords = ["Quantum", "Quantinuum"]
categories = ["compilers"]

[lints]
workspace = true

[dependencies]
hugr.workspace = true
semver = "1.0.27"
strum = { workspace = true, features = ["derive"] }
tket-qsystem = { version = "0.23.0", path = "../tket-qsystem" }
