[package]
name = "pg-core"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

license = { workspace = true }
readme = "README.md"
documentation = "https://docs.rs/pg-libs"
homepage = { workspace = true }
repository = { workspace = true }
description = "..."
keywords = ["Quantum", "Quantinuum"]
categories = ["compilers", "science::quantum-computing"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
